--- a/WebApi-Database/appsettings.json
+++ b/WebApi-Database/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer" : "abc.com"
+  },
   "ConnectionStrings": {
     "MyConnection": "data source=ANAMIKA\\SQLSERVER;initial catalog=StudentDb;integrated security=true;TrustServerCertificate=True"
   }
