added upload part

--- a/WebApi-Database/appsettings.json
+++ b/WebApi-Database/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "ThisismySecretKey",
+    "Key": "ThisismySecretKeyjhkjhkjhkjhjhjjhkjhjkhkjuj",
     "Issuer" : "abc.com"
   },
   "ConnectionStrings": {
